played with intake

--- a/RecycleRush2538.yml
+++ b/RecycleRush2538.yml
@@ -449,7 +449,7 @@ Children:
           default: whileHeld
           name: When to Run
           validators: null
-          value: whileHeld
+          value: whenPressed
       Base: Joystick Button
       Name: intakeButton
     - Children: []
