refactored drive and mecanum speed controller added encoders and added wiring table

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,19 @@ hs_err_pid*
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
