added test stuff for mecanum

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,24 @@ hs_err_pid*
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
